# Linux-CPU-Hotplugger

./: CMakeLists.txt  README.md  main.cpp
GUI controller/: AboutDialog.cpp  AboutDialog.h  MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h
